--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="t_tuloclear">Título: - - -</string>
     <string name="subtituloclear">Subtitulo: - - -</string>
     <string name="autoresclear">Autores: - - -</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
