--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,8 @@
     <string name="autoresclear">Autores: - - -</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="error.server.access">Problemas ao acessar os dados do servidor.</string>
+    <string name="info.login.token.expired">Efetue login novamente.</string>
+    <string name="error.server.general">Não foi possível acessar o servidor.</string>
 </resources>
